--- a/src/aboutus/AboutusMain.module.css
+++ b/src/aboutus/AboutusMain.module.css
@@ -1,4 +1,4 @@
-.AboutUsImg {
+.AboutUsImg저장 {
     /* scroll */
     animation: scroll 10s linear infinite;
     width: 100%;
@@ -7,4 +7,25 @@
     /* object-fit: cover; */
     object-position: center;
 }
- 
+
+.AboutUsImg {
+    animation: scroll 10s linear infinite;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    z-index: -1;
+}
+
+.title {
+    /* top : 50%;
+    left : 50%;
+    width : 100%;
+    height : 100%; */
+    /* width: 20%;
+    margin-left: 40%;
+    margin-right: 40%; */
+    width: 40%;
+    margin-left: 30%;
+    margin-right: 30%;
+    margin-top: 200px;
+}
