--- a/src/aboutus/AboutusMain.module.css
+++ b/src/aboutus/AboutusMain.module.css
@@ -1,31 +1,42 @@
 .AboutUsImg저장 {
-    /* scroll */
-    animation: scroll 10s linear infinite;
-    width: 100%;
-    /* height: 100%; */
-    display: flex;
-    /* object-fit: cover; */
-    object-position: center;
+  /* scroll */
+  animation: scroll 10s linear infinite;
+  width: 100%;
+  /* height: 100%; */
+  display: flex;
+  /* object-fit: cover; */
+  object-position: center;
 }
 
 .AboutUsImg {
-    animation: scroll 10s linear infinite;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%);
-    z-index: -1;
+  animation: scroll 10s linear infinite;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+  z-index: -2;
+  width: 1550px;
 }
 
 .title {
-    /* top : 50%;
+  /* top : 50%;
     left : 50%;
     width : 100%;
     height : 100%; */
-    /* width: 20%;
+  /* width: 20%;
     margin-left: 40%;
     margin-right: 40%; */
-    width: 40%;
-    margin-left: 30%;
-    margin-right: 30%;
-    margin-top: 200px;
+  width: 40%;
+  margin-left: 30%;
+  margin-right: 30%;
+  margin-top: 200px;
 }
+
+/* .whiteMenuBar {
+  position: fixed;
+  background-color: white;
+  width: 100vw;
+  height: 55px;
+  left: 0;
+  top: 0;
+  z-index: -1;
+} */
