--- a/src/donations/donationHeader.module.css
+++ b/src/donations/donationHeader.module.css
@@ -1,62 +1,78 @@
 .header {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    overflow: hidden;
-    /* margin-top: 200px; */
-    text-align: center;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
+  /* margin-top: 200px; */
+  text-align: center;
 }
 .menuBar {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* width: 100%;/// */
-    height: 57px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* width: 100%;/// */
+  height: 57px;
 }
 .menuBar > a {
-    font-weight: 700;
-    font-size: 1.0rem;
-    color: gray;
-    margin: auto 5%;
-    display: flex;
+  font-weight: 700;
+  font-size: 1rem;
+  color: gray;
+  margin: auto 9%;
+  /* display: flex; */
+  display: grid;
+  margin-top: 8px;
+  transition: color 0.3s ease-in-out;
 }
 li {
-    padding-left: 4.5%;
-    list-style-type: none;
-    width: 60%;
-    display: flex;
-    flex-wrap: wrap;  
-    justify-content: center;
-    flex-direction : row;
+  padding-left: 4.5%;
+  list-style-type: none;
+  width: 60%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  flex-direction: row;
 }
 .menuBar > a:hover {
-    color: black;
-    transition: all 0.2s ease-in-out;     
-    /* background-color: white///;                                                                                                                                                                                                                                                                                                               */
+  color: black;
+  transition: color 0.3s ease-in-out;
+  /* background-color: white///;                                                                                                                                                                                                                                                                                                               */
 }
-li a:hover:before {
-    content:"";
-    position:absolute;
-    top:25px;
-    background: #13B861;
-    width:10px;
-    height:10px;
-    border-radius:100%;
-    left:calc(51% - 5px);
- }
- li a:active{
-    content:"";
-    position:absolute;
-    top:25px;
-    background: #13B861;
-    width:2px;
-    height:2px;
-    border-radius:100%;
-    left:calc(51% - 5px);
- }
 
- li a{
-    /* display:flex; */
-    position:relative;
- }
+.selected {
+  color: black;
+  transition: color 0.3s ease-in-out;
+}
+/* li a:hover:before {
+  content: '';
+  position: absolute;
+  top: 25px;
+  background: #13b861;
+  width: 10px;
+  height: 10px;
+  border-radius: 100%;
+  left: calc(51% - 5px);
+} */
+/* li a:active {
+  content: '';
+  position: absolute;
+  top: 25px;
+  background: #13b861;
+  width: 2px;
+  height: 2px;
+  border-radius: 100%;
+  left: calc(51% - 5px);
+} */
+
+.dot {
+  border-radius: 50%;
+  background-color: #048537;
+  width: 8px;
+  height: 8px;
+  margin: 0 auto;
+}
+
+li a {
+  /* display:flex; */
+  position: relative;
+}
