--- a/src/adoptionPosts/kokatoo.module.css
+++ b/src/adoptionPosts/kokatoo.module.css
@@ -1,11 +1,14 @@
 .kokatooContainer {
   display: flex;
-    flex-direction: column;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100%;
+  /* height: 100%; */
+  height: auto;
   width: 100%;
-  margin-top: 600px;
+  /* margin-top: 600px; */
+  padding-left: 10px;
+  padding-right: 10px;
 }
 .kokatooHeader {
   font-size: 2rem;
@@ -13,193 +16,272 @@
   margin-bottom: 1rem;
 }
 .tag {
-    border-radius: 1.5rem;
-    border: 1.5px solid #ccc;
-    margin: 0.5rem;
-    padding: 0.3rem 0.5rem;
-    font-size: 0.8rem;
-    font-weight: bold;
-    flex-shrink: 0;
+  border-radius: 1.5rem;
+  border: 1.5px solid #ccc;
+  margin: 0.5rem;
+  padding: 0.3rem 0.5rem;
+  font-size: 0.9rem;
+  font-weight: bold;
+  flex-shrink: 0;
+  padding-left: 12px;
+  padding-right: 12px;
+  background-color: #fff;
 }
-.tags{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    /* margin-bottom: 1rem; */
+.tags {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  /* margin-bottom: 1rem; */
+  gap: 6px;
+  position: relative;
+  left: 4px;
+  color: #444444;
 }
 
-.dropbtn{
-    color: rgb(188, 188, 188);
-    font-size: 10px;
-    border: none;
-    cursor: pointer;
-    padding: 5px;
-    background-color: inherit;
-    display: flex;
-    flex-direction: row;
-    /* justify-content: flex-end; */
+.dropbtn {
+  color: rgb(188, 188, 188);
+  font-size: 10px;
+  border: none;
+  cursor: pointer;
+  padding: 5px;
+  background-color: inherit;
+  display: flex;
+  flex-direction: row;
+  /* justify-content: flex-end; */
 }
-.dropodownContent{
-    display: none;
-    position: absolute;
-    /* background-color: #f9f9f9; */
-    min-width: 160px;
-    box-shadow: 0px 8px 50px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+.dropodownContent {
+  display: none;
+  position: absolute;
+  /* background-color: #f9f9f9; */
+  min-width: 160px;
+  box-shadow: 0px 8px 50px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
 }
-.dropdown:hover .dropdownContent{
-    display: flex;
-    flex-direction: column;
-    max-width: 70px;
+.dropdown:hover .dropdownContent {
+  display: flex;
+  flex-direction: column;
+  max-width: 70px;
 }
-.dropdownContent a{
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
+.dropdownContent a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
 }
 
 /* hide dropdown content when not hover */
-.dropdownContent{
-    display: none;
+.dropdownContent {
+  display: none;
+  width: 100px;
+  height: 60px;
+  border-radius: 7px;
+  transform: translateX(-25%);
+  background-color: #e2e1e1;
+  position: absolute;
+  padding-top: 6px;
 }
 .dropdownContent > button {
-    background-color: inherit;
-    position: absolute;
-    border: none;
-    color: inherit;
-    cursor: pointer;
-    font-size: 10px;
-    padding: 5px;
-    display: flex;
+  background-color: inherit;
+  /* position: absolute; */
+  border: none;
+  color: inherit;
+  cursor: pointer;
+  font-size: 10px;
+  /* padding: 5px; */
+  display: flex;
 }
-.dropdownContent > button:nth-child(2){
-    margin-top: 15px;
+.dropdownContent > button:nth-child(2) {
+  /* margin-top: 15px; */
 }
-.dropdownContent > button:nth-child(3){
-    margin-top: 26px;
+.dropdownContent > button:nth-child(3) {
+  /* margin-top: 26px; */
 }
-.hrShadow{
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-    width: 100%;
+.hrShadow {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  width: 100%;
+  position: relative;
+  top: -9px;
 }
-#relatedImg{
-    width: 2.2%;
-    height: 2.2%;
-    margin-right: 3px;
-    margin-top: 1px;
+#relatedImg {
+  width: 100%;
+  height: 100%;
+  /* margin-right: 3px;
+  margin-top: 1px; */
 }
-.tagImg{
-    display: flex;
-    justify-content: flex-end;
+.tagImg {
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 75px;
+  margin-bottom: 20px;
 }
 .tagImg > span {
-    font-size: 0.7rem;
-    font-weight: 600;
-    color: rgb(188, 188, 188);
+  font-size: 0.7rem;
+  font-weight: 600;
+  color: rgb(188, 188, 188);
 }
-.tag:hover{
-    background-color: #ccc;
-    cursor: pointer;
+.tag:hover {
+  background-color: #ccc;
+  cursor: pointer;
 }
 #number {
-    color: #13B861;
-    font-weight: 700;
-    font-size: 1.2rem;
+  color: #13b861;
+  font-weight: 700;
+  font-size: 1.2rem;
 }
-#numberExplanation{
-    font-size: 1rem;
-    font-weight: 550;   
+#numberExplanation {
+  font-size: 1rem;
+  font-weight: 550;
 }
-.hrShadowUp{
-    box-shadow: 0 -4px 8px 0 rgba(0,0,0,0.2), 0 -6px 20px 0 white;
-    /* width: 1200px; */
+.hrShadowUp {
+  box-shadow: 0 -4px 8px 0 rgba(0, 0, 0, 0.2), 0 -6px 20px 0 white;
+  /* width: 1200px; */
 }
-.post__img{
-    width: 25%;
-    /* height: 100%; */
-    object-fit: cover;
+.post__img {
+  width: 100%;
+  /* height: 100%; */
+  object-fit: cover;
 }
-.kokatoo__body{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    max-width: 1000px;
+.kokatoo__body {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  max-width: 1000px;
 }
-.posts{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-}
-.post{
-    display: flex;
-    flex-direction: row;
-    /* align-items: center; */
-    /* justify-content: space-between; */
-    width: 100%;
-    margin-bottom: 1rem;
-    object-fit: contain;
-    background-color: white;
-    /* padding till end of screen */
-    padding-right: 1rem;
-    padding-left: 1rem;
-
-}
-.post__data{
-    width: 100%;
-    margin-left: 1.4rem;
-    margin-top: 1rem;
-}
-.post__title{
-    font-size: 1.2rem;
-    font-weight: 600;
-}
-.post__description{
-    font-size: 0.9rem;
-    font-weight: 500;
-}
-.post__tag{
-    border-radius: 1.5rem;
-    border: 1.0px solid #ccc;
-    margin:  0  0.2rem;
-    margin-top: 0;
-    padding: 0.2rem 0.4rem;
-    font-size: 0.7rem;
-    font-weight: 540;
-}
-.post__info{
-    font-size: 0.7rem;
-    font-weight: 600;
-    color: rgb(188, 188, 188);
-    padding: 0.2rem 0;
-    margin: 0 0.5rem;
-}
-.post__titleContiner{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 100%;
-}
-.heart{
-    width: 1.8rem;
-    height: 1.8rem;
-    margin-right: 1.5rem;
-}
-.sort {
-    margin-bottom: 2rem;
+.posts {
+  width: 100%;
+  /* display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%; */
 }
 .post {
-    margin: 20px;
+  width: 86%;
+  margin-left: 7%;
+  margin-right: 7%;
+  display: grid;
+  grid-template-columns: 250px 592px;
+  /* background-color: #13b861; */
+  /* display: flex;
+  flex-direction: row; */
+  /* align-items: center; */
+  /* justify-content: space-between; */
+  /* width: 100%;
+  margin-bottom: 1rem;
+  object-fit: contain;
+  background-color: white; */
+  /* padding till end of screen */
+  /* padding-right: 1rem;
+  padding-left: 1rem; */
 }
-.kokatoo__body{
-    width: 100%;
-    background-color: rgb(238, 237, 237);
+.post__data {
+  width: 100%;
+  /* margin-left: 1.4rem;
+  margin-top: 1rem; */
+  padding-left: 35px;
+  padding-right: 10px;
+}
+.post__title {
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+.post__description {
+  font-size: 0.9rem;
+  font-weight: 500;
+}
+.post__tag {
+  /* border-radius: 1.5rem;
+  border: 1px solid #ccc;
+  margin: 0 0.2rem;
+  margin-top: 0;
+  padding: 0.2rem 0.4rem;
+  font-size: 0.7rem;
+  font-weight: 540; */
+  /* border-radius: 1.5rem;
+  border: 1.5px solid #ccc;
+  margin: 0.5rem;
+  padding: 0.3rem 0.5rem;
+  font-size: 0.9rem;
+  font-weight: bold;
+  flex-shrink: 0;
+  padding-left: 12px;
+  padding-right: 12px; */
+  border-radius: 1.5rem;
+  border: 1.5px solid #ccc;
+  /* margin: 0.5rem; */
+  padding: 0.3rem 0.5rem;
+  font-size: 0.7rem;
+  font-weight: bold;
+  flex-shrink: 0;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-right: 10px;
+  color: #444444;
+}
+.post__info {
+  font-size: 0.7rem;
+  font-weight: 600;
+  color: rgb(188, 188, 188);
+  padding: 0.2rem 0;
+  margin: 0 0.5rem;
+}
+.post__titleContiner {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+}
+.heart {
+  width: 1.8rem;
+  height: 1.8rem;
+  margin-right: 1.5rem;
+}
+.sort {
+  /* margin-bottom: 2rem; */
+}
+/* .post {
+  margin: 20px;
+} */
+.kokatoo__body {
+  width: 100%;
+  /* background-color: rgb(238, 237, 237); */
+  background-color: #f8f8f8;
 }
 .kokatooHead {
-    background-color: rgb(238, 237, 237);
+  background-color: rgb(238, 237, 237);
+}
+
+.v {
+  width: 100%;
+}
+
+.numOfSearchResults {
+  padding-left: 8%;
+  display: flex;
+  justify-content: space-between;
+  padding-right: 8%;
+}
+
+.tagImgContainer {
+  display: grid;
+  grid-template-columns: 16px auto;
+  color: #c5c5c5;
+  font-size: 0.8rem;
+  align-items: center;
+}
+
+.navContainer {
+  width: 100%;
+  height: auto;
+  background-color: #f8f8f8;
+}
+
+.postContainer {
+  width: 100%;
+  background-color: #fff;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
