--- a/src/index.css
+++ b/src/index.css
@@ -12,12 +12,14 @@
   user-select: none;
 }
 
-html, body, #root {
+html,
+body,
+#root {
   margin: 0;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items:   center;
+  align-items: center;
   width: 100%;
   height: 100%;
 }
@@ -29,4 +31,8 @@ a {
 
 body {
   overflow-x: hidden;
+  /* position: fixed !important;
+  height: 100%;
+  margin: 0;
+  padding: 0; */
 }
