--- a/src/adopt/form.module.css
+++ b/src/adopt/form.module.css
@@ -16,3 +16,27 @@
   /* height: 100%; */
   margin-bottom: 70px;
 }
+
+#nextBtn {
+  background-color: #4caf50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+  position: relative;
+  top: -42px;
+  transition: all 0.3s ease;
+}
+
+#nextBtn:hover {
+  background-color: #45a049;
+  transition: all 0.3s ease;
+}
+
+#canvas {
+  border-radius: 10px;
+  width: 60%;
+  border: 1px solid #4caf50;
+}
